--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
             body { background-color: white !important; padding: 0 !important; }
             .main-border { border-width: 4px !important; }
             * { -webkit-print-color-adjust: exact !important; print-color-adjust: exact !important; }
-            /* Force grid layout on print even if on mobile */
             #grid-container {
                 display: grid !important;
                 grid-template-columns: 140px repeat(5, 1fr) !important;
@@ -38,7 +37,6 @@
             .time-label-mobile { display: none !important; }
         }
         
-        /* Desktop Grid Layout */
         .disconnected-grid {
             display: grid;
             grid-template-columns: 100px repeat(5, 1fr);
@@ -51,10 +49,9 @@
             }
         }
 
-        /* Mobile Adjustments */
         @media (max-width: 767px) {
             .disconnected-grid {
-                display: block; /* Stack on mobile */
+                display: block;
             }
             .mobile-day-section {
                 margin-bottom: 2rem;
@@ -93,7 +90,6 @@
             }
         }
 
-        /* Split cell styling */
         .split-container {
             display: flex;
             flex-direction: column;
@@ -118,7 +114,6 @@
 </head>
 <body class="p-2 md:p-10">
 
-    <!-- Actions -->
     <div class="max-w-[1200px] mx-auto mb-4 md:mb-8 flex gap-2 md:gap-4 no-print justify-center md:justify-end">
         <button onclick="downloadPNG()" class="bg-black text-white px-4 md:px-6 py-2 md:py-3 rounded-full text-sm md:text-base font-bold hover:bg-gray-800 transition-all flex items-center gap-2">
             Save PNG
@@ -128,10 +123,8 @@
         </button>
     </div>
 
-    <!-- Capture Area -->
     <div id="capture-area" class="max-w-[1200px] mx-auto p-4 md:p-10 bg-white main-border rounded-[1.5rem] md:rounded-[2.5rem]">
         
-        <!-- Header -->
         <div class="mb-4 md:mb-6 text-center">
             <h1 class="text-2xl md:text-4xl font-extrabold uppercase tracking-tight mb-1 md:mb-2">Class Routine</h1>
             <p class="text-sm md:text-xl font-semibold uppercase">
@@ -142,16 +135,13 @@
             <div class="w-16 md:w-24 h-1 md:h-2 bg-black mx-auto mt-2 md:mt-4 rounded-full"></div>
         </div>
 
-        <!-- Section Toggles (No Print) -->
         <div class="flex flex-wrap gap-2 mb-6 no-print justify-center">
             <button onclick="updateView('A')" id="tab-A" class="flex-1 md:flex-none px-3 md:px-6 py-2 rounded-xl border-2 border-black font-bold bg-white text-black text-xs md:text-base transition-colors shadow-[2px_2px_0px_0px_rgba(0,0,0,1)]">Sec A</button>
             <button onclick="updateView('B')" id="tab-B" class="flex-1 md:flex-none px-3 md:px-6 py-2 rounded-xl border-2 border-black font-bold bg-white text-black text-xs md:text-base transition-colors shadow-[2px_2px_0px_0px_rgba(0,0,0,1)]">Sec B</button>
             <button onclick="updateView('COMBINED')" id="tab-COMBINED" class="w-full md:w-auto px-6 py-2 rounded-xl border-2 border-black font-bold bg-black text-white text-xs md:text-base transition-colors shadow-[2px_2px_0px_0px_rgba(0,0,0,1)]">Combined</button>
         </div>
 
-        <!-- Legend Area -->
         <div class="mb-6 md:mb-8 border-b-2 border-slate-100 pb-4 md:pb-6">
-            <!-- Combined Legend (Sections) -->
             <div id="legend-combined" class="flex justify-center gap-4 md:gap-8 hidden">
                 <div class="flex items-center gap-2 md:gap-3">
                     <div class="w-4 h-4 md:w-6 md:h-6 rounded border-2 border-black bg-[#dbeafe]"></div>
@@ -163,18 +153,15 @@
                 </div>
             </div>
 
-            <!-- Section A/B Legend (Courses) -->
             <div id="legend-courses" class="flex flex-wrap justify-center gap-x-4 md:gap-x-8 gap-y-2 md:gap-y-3 hidden">
                 <!-- Injected by JS -->
             </div>
         </div>
 
-        <!-- Grid Container -->
         <div class="disconnected-grid" id="grid-container">
             <!-- Content Injected by JavaScript -->
         </div>
 
-        <!-- Footer Info -->
         <div class="mt-8 md:mt-12 flex flex-col md:flex-row justify-between items-center md:items-end gap-4 text-center md:text-left">
             <div>
                 <p class="text-[10px] md:text-sm font-bold uppercase opacity-40 italic leading-none">University of Dhaka</p>
@@ -207,7 +194,7 @@
         ];
 
         const courseDetails = {
-            "102": { name: "Principles of Macroeconomics", color: "#ffe4e6" }, 
+            "102": { name: "Macroeconomics", color: "#ffe4e6" }, 
             "104": { name: "Mathematics II", color: "#fef3c7" }, 
             "106": { name: "Statistics II", color: "#f3e8ff" }, 
             "110": { name: "English Comprehension", color: "#cffafe" }  
@@ -262,7 +249,6 @@
             const isMobile = window.innerWidth < 768;
 
             if (!isMobile) {
-                // DESKTOP GRID RENDERING
                 const header = document.createElement('div');
                 header.className = "h-10"; container.appendChild(header);
                 days.forEach(day => {
@@ -281,7 +267,6 @@
                     });
                 });
             } else {
-                // MOBILE STACK RENDERING
                 days.forEach(day => {
                     const matchedClassesForDay = scheduleData.filter(item => 
                         item.day === day && (currentSection === 'COMBINED' || item.section === currentSection)
